arc: Avoid logspam in the audio bridge

This mitigates a runaway logging loop by avoiding to acquire the
instance when we know it won't be possible to acquire.

BUG=736011
TEST=Could not repro, but it should produce less spam

Change-Id: I24642d799baebf7ea1a8dd5abcc759e97c2efc37